# RockClimbingLogBook

./: .gitignore  LICENSE  README.md
climb-log/: Cargo.toml  sqlite.db  test.db
climb-log-rocket/: Cargo.toml
climb-log-rocket/src/: main.rs
climb-log-ui/: Cargo.toml
climb-log-ui/src/: main.rs
climb-log/migration/: Cargo.toml
climb-log/migration/src/: lib.rs  m20220101_000001_create_grades_table.rs  m20220101_000001_create_routes_table.rs  m20220101_000001_create_sends_table.rs
climb-log/src/: climbing.rs  main.rs  routes_db.rs  routes_sql.db  ui.rs
climb-log/src/entities/: grades.rs  mod.rs  prelude.rs  routes.rs
climb-log/src/routes_db/entities/: mod.rs  prelude.rs  routes.rs  sends.rs
climb-log/src/ui/: climbing.rs  routes_db.rs
climb-log/src/ui/routes_db/entities/: grades.rs  routes.rs  sends.rs
gui-test/: Cargo.toml
log-book/src/: editor.rs  main.rs
log-book/src/editor/: terminal.rs  view.rs
log-book/src/editor/view/: buffer.rs
log_book/src/: editor.rs  main.rs
log_book/src/editor/: terminal.rs
text-editor-deprecated/: Cargo.toml
text-editor-deprecated/src/: editor.rs
text-editor-deprecated/src/editor/: document.rs
