[package]
name = "climb-log"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = [ "all_loaders", "chrono" ] }
image = { version = "0.25.1", features = [ "png" ]}
futures = "0.3.30"
itertools = "0.13.0"
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
tokio = { version = "1.21.2", features = ["full"] }
chrono = "0.4.38"
csv = "1.3.0"
